--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="eji6_pL4ztQyDnOFWf3wk70BNUqQoi7yjUL7jW7C8RM" />
     <title>To Do App</title>
     
     <link rel="stylesheet" href="style.css">
@@ -38,4 +39,5 @@
   </div>
  <script src="JavaScript.js"></script>
 </body>
+
 </html>
